[gd_scene load_steps=2 format=3 uid="uid://c4q8h2lfnxk7p"]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.12, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 36
text = "LOBBY"

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
text = "BACK"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Content" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 40

[node name="PlayersPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/Content"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/PlayersPanel"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PlayersLabel" type="Label" parent="MarginContainer/VBoxContainer/Content/PlayersPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Players"

[node name="PlayerList" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/PlayersPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/Content"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Content/SettingsPanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="SettingsLabel" type="Label" parent="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Game Settings"

[node name="MapLabel" type="Label" parent="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox"]
layout_mode = 2
text = "Map:"

[node name="MapSelect" type="OptionButton" parent="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox"]
layout_mode = 2

[node name="ServerInfo" type="Label" parent="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
text = "Server: 127.0.0.1:7777"

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="ReadyCheck" type="CheckBox" parent="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox"]
layout_mode = 2
text = "Ready"

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="StartButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
text = "START GAME"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Header/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox/MapSelect" to="." method="_on_map_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Content/SettingsPanel/VBox/ReadyCheck" to="." method="_on_ready_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Footer/StartButton" to="." method="_on_start_button_pressed"]
